src/style.css
.link-interno {
  font-family: var(--font-primary);
  text-decoration: none;
  color: var(--black-deep);
  font-weight: var(--font-light);
  margin: 0 8px;
  font-size: clamp(1rem, 1.1vw, 1.1rem);
  transition: 0.5s;
  transition-behavior: smooth;
}
.link-interno:hover {
  color: rgb(157, 154, 154);
  transition: 0.5s;
  filter: blur(0.1px);
  transition-behavior: smooth;
}

header {
  background-color: #ffffff;
  position: sticky;
  top: 0;
  z-index: 1000;
}

.container-header {
  display: grid;
  grid-template: 80px / repeat(2, auto);

  padding: .6vw 4vw;
  justify-content: space-between;
  align-items: center;


  margin: auto;
}

.logo-icon-saints {
  width: 90px;
}

.burguer-menu {
  display: none;
  position: fixed;
  top: 30px;
  right: 24px;
  z-index: 9999;
}

.nav-header-menu {
  display: flex;
  gap: 20px;
}

@media (max-width: 760px) {
  .nav-header-menu {
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    inset: 0;
    height: 100%;
    width: 100%;
    z-index: 8888;
    
    background: #ffffffde;
    backdrop-filter: blur(22px);
    transition: 0.5s;
  }

  .nav-header-menu.is-open {
    display: flex;
  }

  .link-interno {
    font-size: 2rem;
  }

  .burguer-menu {
   display: block;
  }

  .burguer-menu div {
    width: 32px;
    height: 2px;
    background: var(--black-deep);
    margin: 8px;
    cursor: pointer;
    transition: 0.3s;
  }

  .first-line.active {
    transform: rotate(-41deg) translate(-7px, 7px);
  }
  .second-line.active {
    transform: rotate(41deg) translate(-1px, 1px);
  }
}

/* Scroll Bar */

.scrollbar {
  position: fixed;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  height: 100px;
  width: 3px;
  background: rgba(116, 116, 116, 0.533);
  z-index: 1000;
  border-radius: 50px;
}

.thumb {
  width: 100%;
  height: 100px;
  background: rgb(238, 238, 238);
  opacity: 0.6;
  transform-origin: top;
  z-index: 1000;

}

/* Seções abaixo do menu */

.container-main {
  background: var(--gradient-perfect-blackgray);
  text-align: center;
  padding: var(--space-lg) var(--space-md) var(--space-lg) var(--space-md);
  max-width: 900px auto;
  margin: 0;
}

.container-second-main {
  background: var(--gradient-white-premium);
  text-align: center;
  padding: var(--space-lg) var(--space-md) var(--space-lg) var(--space-md);
  max-width: 900px auto;
  margin: 0;
}

.container-hero {
  background: var(--gradient-white-premium);
  text-align: center;
  padding: var(--space-extreme-lg) var(--space-md) var(--space-lg);
  max-width: 900px auto;
  margin: 0;
}

.container-lastsection-black {
  background: var(--gradient-perfect-blackgray);
  padding: var(--space-lg) var(--space-md) var(--space-lg) var(--space-md);
  max-width: 900px auto;
  text-align: center;
}

.h3-announce-area-white {
  font-family: var(--font-primary);
  color: var(--black-soft);
  font-weight: var(--font-bold);
  font-size: clamp(1.7rem, 5vw, 4rem);
  line-height: 1.25;
}

.layout-only {
  height: 200px;
  background: var(--gradient-perfect-gray);

}


/* carrossel reviews */

.container-reviews{
  background: var(--gradient-perfect-grayfullblack);
  height: 500px;

  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  align-items: center;
}

.carrossel {
  margin: 0 auto;
  max-width: 1170px;
  min-width: 220px;
  position: relative;
  overflow: hidden;
  
}

.carrossel-track {
  display: flex;
  transition: transform 0.5s ease;
  touch-action: pan-x;
}

/* Controls */

.dots-btn {
  appearance: none;
  -webkit-appearance: none;

  width: 10px;
  height: 10px;
  margin-right: 10px;

  border-radius: 50%;
  border: 1.5px solid rgba(255, 255, 255, 0.6);
  background-color: rgba(255, 255, 255, 0.12);

  cursor: pointer;

  transition:
    transform 0.25s ease,
    background-color 0.25s ease,
    border-color 0.25s ease,
    opacity 0.25s ease;

  opacity: 0.9;
}


.dots-btn:hover {
  background-color: rgba(255, 255, 255, 0.723);
}

/* Ativo / selecionado */
.dots-btn:checked {
  background-color: #ffffff;
  border-color: #ffffff;

  transform: scale(1.4);
  opacity: 1;
}

.arrow {
  position: absolute;
  

  background: none;
  border: none;
  color: white;
  font-size: 70px;
  cursor: pointer;

  opacity: 0.6;
  transition: opacity 0.3s ease;
}

.arrow:hover {
  opacity: 1;
}

.arrow.prev {
  left: 30px;
}

.arrow.next {
  right: 30px;
}

@media (max-width: 768px) {
  .arrow {
    display: none;
  }
}


/* Estilização do card*/

.card-review {
  display: none;
  max-width: 500px;
  min-width: 300px;
  text-align: center;
  font-family: var(--font-primary);
}

.card-review.active {
  display: block;
}


.client-review-name {
  color: var(--white-soft);
  border-bottom: 1px solid var(--white-main);
  display: inline-block;
  width: 200px;
  margin: 20px;
  font-size: 30px;
  padding-bottom: 20px;
}

.client-review {
  color: var(--white-soft);
  font-size: 17px;
  margin: 0px 20px

}



/* Depois das Sections*/


.visually-primary {
  font-family: var(--font-primary);
  font-size: var(--space-regular);
  margin-bottom: var(--space-md);
  font-weight: var(--font-light);
}

.h2-slogan-1 {
  font-family: var(--font-primary);
  color: var(--white-deep);
  font-weight: var(--font-extralight);
  font-size: clamp(2rem, 6vw, 3.5rem);
  line-height: 1.25;
  transition: ease 0.4s;
  transition-behavior: smooth;
}

.h2-slogan-2 {
  font-family: var(--font-primary);
  color: var(--black-main);
  font-weight: var(--font-bold);
  font-size: clamp(1.3rem, 5vw, 3.3rem);
  line-height: 1.25;
  transition: 0.4s;
  transition-behavior: smooth;
}

.p-global-big {
  font-family: var(--font-primary);
  font-size: clamp(14px, 2vw, 1rem);
  text-wrap: balance;
  margin-top: 20px;
  color: var(--white-soft);
}

* {
  color-scheme: light;
  scroll-behavior: smooth;
  box-sizing: border-box;
  padding: 0;
  scrollbar-width: none;
}

html::-webkit-scrollbar {
  display: none; 
}

a,
button,
.burguer-menu {
  cursor: pointer;
}

.p-global {
  font-family: var(--font-primary);
  font-size: clamp(0.8rem, 3vw, 1rem);
  margin: var(--space-lg) 0px 0px;
  line-height: 1.5;
  word-wrap: break-word;
  transition: 0.2s;
  transition-behavior: smooth;
  width: 100%;
}

.p-normal {
  font-family: var(--font-primary);
  font-weight: 200;
  width: 70%;
}

.h3-announce {
  font-family: var(--font-primary);
  color: var(--white-main);
  font-weight: 700;
  font-size: clamp(1.7rem, 7vw, 4rem);
  line-height: 1.25;
  margin-top: 20px;
  margin-bottom: 12px;
}

.announce-info-p-white {
  color: var(--gray-disabled);
  font-family: var(--font-primary);
  font-weight: var(--font-light);
  margin-top: 40px;
  text-wrap: balance;
}

.container-flex-videos-vertical {
  width: 100%;
  max-width: 3500px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 66px;
  margin-top: 50px;
  border-radius: 5px;
}

.video-flex-vertical {
  border: 1px solid black;
  flex: 0 0 100%;
  aspect-ratio: 9 / 16;
  border-radius: 5px;
  box-shadow: inset 0 0 40px black;
  transition: 0.5s;
  cursor: pointer;
}
.video-flex-vertical:hover {
  box-shadow: 5px 5px 55px rgba(255, 255, 255, 0.264);
}

.video-description {
  font-family: var(--font-primary);
  margin-top: 10px;
  font-weight: var(--font-regular);
  color: var(--white-main);
}
.video-vertical-card {
  flex: 0 0 100%;
  max-width: 250px;
}

.container-flex-videos-horizontal {
  width: 100%;
  max-width: 3000px;
  gap: 40px;
  margin-top: 50px;
  border-radius: 5px;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
}

.video-horizontal-card {
  width: 100%;
  flex-shrink: 1;
  max-width: 800px;
  border: 1px solid rgba(27, 26, 26, 0.625);
  box-shadow: 3px 3px 15px rgba(13, 13, 13, 0.332);
  border-radius: 5px;
  margin-bottom: 25px;
}

.video-flex-horizontal {
  flex: 0 1 100%;
  aspect-ratio: 16 / 9;
  cursor: pointer;
  border-radius: 5px;
}

.announce-info-h3 {
  color: var(--white-other);
  font-family: var(--font-primary);
  font-weight: var(--font-regular);
  margin-top: 40px;
}

.toggle-contact {
  display: none;
}

.ul-global {
  overflow: hidden;
  opacity: 0;
  transform: translateY(-4px);
  transition: height 0.45s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.25s ease,
    transform 0.25s ease;
}

.ul-global.is-open {
  opacity: 1;
  transform: translateY(0);
}

/***
Botão de ação dos contatos
***/

.contact-toggle {
  background: none;
  border: none;
  width: 100%;
  text-align: left;
  padding: 6px 0;
}

.link-external {
  font-family: var(--font-primary);
  text-decoration: none;
  color: var(--black-deep);
  font-weight: var(--font-extralight);
  margin: 5px;
  font-size: clamp(0.9rem, 3vw, 1rem);
  transition: 0.5s;
  transition-behavior: smooth;
}
.link-external:hover {
  color: var(--gray-disabled);
  transition: 0.5s;
  transition-behavior: smooth;
}

#special {
  font-weight: var(--font-semibold);
  width: 97%;
  color: var(--gray-disabled);
}
#special:hover {
  color: var(--gray-hover);
  transition: 0.3s;
}

.container-contact-footer {
  padding-bottom: 15px;
}

.icon-contact {
  width: 19px;
  vertical-align: middle;
}

@media (min-width: 1390px) {
  .p-global-big {
    padding: 0px 50vb;
  }
}

@media (min-width: 600px) {
  .p-normal {
    font-size: clamp(0.7rem, 3.5vw, 1rem);
    transform: translate(5%, -21px);
    position: absolute;
  }
}

@media (max-width: 600px) {
  .h2-slogan-1 {
    font-size: clamp(1.7rem, 6vw, 2.5rem);
  }
  .h2-slogan-2 {
    font-size: clamp(1.6rem, 5vw, 2rem);
  }
  .p-normal {
    font-size: clamp(0.7rem, 4vw, 1rem);
    transform: translate(7%, -21px);
    position: absolute;
    width: 85%;
  }
}

@media (max-width: 360px) {
  .p-normal {
    font-size: clamp(0.6rem, 4vw, 0.9rem);
    transform: translate(10%, -21px);
    position: absolute;
  }
}

